--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">FacebookCam2</string>
     <string name="hello_world">Hello world!</string>
+    <string name="app_id">225064241037680</string>
 
 </resources>
