I think that it's working under the new name :)
Woot

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">FacebookCam2</string>
+    <string name="app_name">Featherweight Camera</string>
     <string name="hello_world">Hello world!</string>
     <string name="app_id">225064241037680</string>
 
